--- a/BlockWorks/config.toml
+++ b/BlockWorks/config.toml
@@ -2,3 +2,7 @@ baseURL = "http://BlockWorks.co/"
 languageCode = "en-us"
 title = "BlockWorks Co"
 theme = "tale"
+
+
+[Author]
+    name = "Steve Tickle"
